--- a/index.html
+++ b/index.html
@@ -4,9 +4,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Burning man</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+
+    <header class="header" id="header">
+        <div class="container">
+            <div class="nav">
+                <img src="img/logo.svg" alt="Burning man" class="logo">
+                <ul class="menu">
+                    <li>
+                        <a href="#">
+                            Home
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            About
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Tickets
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Contents
+                        </a>
+                    </li>
+                </ul>
+                <a href="tel:+1 893 839-23-64" class="tel">
+                    +1 893 839-23-64
+                </a>
+            </div>
+            <div class="offer">
+                <div class="text-1">
+                    Not tne event. The life
+                </div>
+                <div class="text-2">
+                    Burning MAN
+                </div>
+                <div class="btn">
+                    <a href="#">
+                        Book the tickets
+                    </a>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <section id="about" class="about">
+        <div class="container">
+
+        </div>
+    </section>
+       
+    <footer class="footer" id="footer">
+        <div class="container">
+
+        </div>
+    </footer>
 </body>
 </html>
